[gd_scene load_steps=53 format=2]

[ext_resource path="res://Enemies/Rat/Rat.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Rat/assets/48x48Rat_Idle.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Rat/assets/48x48Rat_Run.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Rat/assets/48x48Rat_Hit.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Rat/assets/48x48Rat_Death.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Rat/assets/48x48Rat_Attack.png" type="Texture" id=6]
[ext_resource path="res://Combat/Hurtbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=8]
[ext_resource path="res://Combat/Hitbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/source/Skin.tscn" type="PackedScene" id=10]
[ext_resource path="res://Enemies/EnemyStateMachine/SpawnEnemy.gd" type="Script" id=11]
[ext_resource path="res://Enemies/EnemyStateMachine/AttackMeeleEnemy.gd" type="Script" id=12]
[ext_resource path="res://Enemies/EnemyStateMachine/MoveEnemy.gd" type="Script" id=13]
[ext_resource path="res://Enemies/EnemyStateMachine/HitEnemy.gd" type="Script" id=14]
[ext_resource path="res://Enemies/EnemyStateMachine/DieEnemy.gd" type="Script" id=15]
[ext_resource path="res://Enemies/EnemyStateMachine/RunEnemy.gd" type="Script" id=16]
[ext_resource path="res://Enemies/EnemyStateMachine/IdleEnemy.gd" type="Script" id=17]
[ext_resource path="res://Enemies/EnemyStateMachine/AirEnemy.gd" type="Script" id=18]

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=104]
animations = [ {
"frames": [ SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ) ],
"loop": true,
"name": "death",
"speed": 7.0
}, {
"frames": [ SubResource( 124 ), SubResource( 124 ), SubResource( 124 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="Animation" id=131]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=132]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 3,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=130]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 3,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=117]
radius = 8.0
height = 14.0

[sub_resource type="RectangleShape2D" id=133]
extents = Vector2( 5, 16.5 )

[sub_resource type="RectangleShape2D" id=141]

[node name="Rat" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 32
collision_mask = 26
script = ExtResource( 1 )
damage = 15
health = 30
score = 15
speed = 100.0
speed_difference_on_spawn_min = -25.0
speed_difference_on_spawn_max = 25.0

[node name="Skin" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, -17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Skin"]
frames = SubResource( 104 )
animation = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Skin"]
anims/RESET = SubResource( 131 )
anims/death = SubResource( 132 )
anims/spawn = SubResource( 130 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 117 )

[node name="Hitbox" parent="." instance=ExtResource( 9 )]
visible = false
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 0, 0, 1 )
rotation = 1.5708
shape = SubResource( 117 )

[node name="LedgeDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="LedgeDetector"]
position = Vector2( 15, 5.5 )
shape = SubResource( 133 )

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
visible = false
modulate = Color( 1, 0.572549, 0, 1 )
collision_layer = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 13, -2 )
shape = SubResource( 141 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 8 )
initial_state = NodePath("SpawnEnemy")

[node name="SpawnEnemy" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="DieEnemy" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="AttackEnemy" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
start_frame = 2
end_frame = 4

[node name="AttackCooldown" type="Timer" parent="StateMachine/AttackEnemy"]
wait_time = 2.0
one_shot = true

[node name="HitEnemy" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="MoveEnemy" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="IdleEnemy" type="Node" parent="StateMachine/MoveEnemy"]
script = ExtResource( 17 )

[node name="RunEnemy" type="Node" parent="StateMachine/MoveEnemy"]
script = ExtResource( 16 )

[node name="AirEnemy" type="Node" parent="StateMachine/MoveEnemy"]
script = ExtResource( 18 )

[connection signal="died" from="Hitbox" to="." method="_on_Hitbox_died"]
[connection signal="got_hit" from="Hitbox" to="." method="_on_Hitbox_got_hit"]
